--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -12,7 +12,7 @@
     <input type="submit" value="Create">
 </form>
 
-{% for vm in virtual_machines.items %}
+{% for vm in vms.items %}
     {{ vm.name }}
 {% endfor %}
 
