--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -35,12 +35,52 @@
             <span class="latest">TAG</span>
             <span class="version">VERSION</span>
             <span class="date">DATE</span>
-            <a href="" class="history">History</a>
-            <a href="" class="history">Play</a>
-            <a href="{{ url_for('download', hostname=vm.hostname) }}" class="download">Download</a>
+            <button type="button" id="btn_history_{{ vm.hostname }}" class="history" onclick="history('{{ vm.hostname }}');">History</button>
+            <button type="button" class="play" onclick="play('{{ vm.hostname }}');">Play</button>
+            <button type="button" class="download" onclick="download('{{ vm.hostname }}');">Download</button>
+
+            <div id="history_view_{{ vm.hostname }}" class="history_view" style="display: none;">
+                <ul>
+                    <li>
+                        <span class="id">ID</span>
+                        <span class="latest">TAG</span>
+                        <span class="version">VERSION</span>
+                        <span class="date">DATE</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div id="terminal_{{ vm.hostname }}" class="terminal" style="display: none;">
+                <p>TERMINAL</p>
+            </div>
+
         </li>
     {% endfor %}
 </ul>
+
+<script>
+    function history(vm_hostname) {
+        view = $("#history_view_"+vm_hostname);
+        if (view.css("display") == "none") {
+            view.css("display", "inline");
+        } else {
+            view.css("display", "none");
+        }
+    }
+
+    function play(vm_hostname) {
+        view = $("#terminal_"+vm_hostname);
+        if (view.css("display") == "none") {
+            view.css("display", "inline");
+        } else {
+            view.css("display", "none");
+        }
+    }
+
+    function download(vm_hostname) {
+        window.location.href = "{{ url_for('download', hostname='') }}" + vm_hostname
+    }
+</script>
 
 </body>
 </html>
