--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<head>
-    <title>Recompute</title>
 
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block container %}
 
 <h1>Recompute</h1>
 
@@ -82,5 +78,4 @@
     }
 </script>
 
-</body>
-</html>
+{% endblock %}
