--- a/recompute/server/templates/layout.html
+++ b/recompute/server/templates/layout.html
@@ -46,6 +46,13 @@
 
 </div><!-- /.container -->
 
+<script>
+function apiStatus(data) {
+  console.log(data.status);
+}
+</script>
+<script src="https://status.github.com/api/status.json?callback=apiStatus"></script>
+
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
