--- a/recompute/server/templates/layout.html
+++ b/recompute/server/templates/layout.html
@@ -31,8 +31,8 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Virtual Machines</a></li>
-                <li><a href="#">Vagrant Boxes</a></li>
+                <li><a href="#">Software</a></li>
+                <li><a href="#">Develop</a></li>
             </ul>
         </div>
         <!--/.nav-collapse -->
