to fix xml parser

--- a/recompute/server/templates/recomputation.html
+++ b/recompute/server/templates/recomputation.html
@@ -15,10 +15,10 @@
                 <div clas="col-md-4">
                     <ul class="list-group">
                         <li class="list-group-item"><span>NAME: {{ recomputation.name }}</span></li>
-                        <li class="list-group-item"><span>ID xxx</span></li>
-                        <li class="list-group-item"><span>TAG xxx</span></li>
-                        <li class="list-group-item"><span>VERSION xxx</span></li>
-                        <li class="list-group-item"><span>DATE xxx</span></li>
+                        <li class="list-group-item"><span>ID: {{ recomputation.id }}</span></li>
+                        <li class="list-group-item"><span>TAG: {{ recomputation.tag }}</span></li>
+                        <li class="list-group-item"><span>VERSION: {{ recomputation.name }}</span></li>
+                        <li class="list-group-item"><span>DATE: {{ recomputation.name }}</span></li>
                     </ul>
                 </div>
             </div>
