--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -5,13 +5,17 @@
 
     <div class="jumbotron">
         <div class="container">
-
-            <h1>Recompute</h1>
-
-            <p>A demo</p>
-
-      </div>
-    </div><!-- /.jumbotron -->
+            <div class="row">
+                <div class="col-md-5">
+                    <h1>Recompute</h1>
+                    <p>A demo</p>
+                </div>
+                <div class="col-md-4 col-md-offset-3">
+                    <p>Number of recomputations: {{ recomputation_count }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
 
@@ -48,11 +52,11 @@
                 <tbody>
                 {% for recomputation in latest_recomputation %}
                     <tr>
-                          <td><a href="{{ url_for('get_single_recomputation_page', name=recomputation.name) }}">{{ recomputation.name }}</a></td>
-                          <td>ID xxx</td>
-                          <td>TAG xxx</td>
-                          <td>VERSION xxx</td>
-                          <td>DATE xxx</td>
+                        <td><a href="{{ url_for('get_single_recomputation_page', name=recomputation.name) }}">{{ recomputation.name }}</a></td>
+                        <td>{{ recomputation.id }}</td>
+                        <td>{{ recomputation.tag }}</td>
+                        <td>{{ recomputation.version }}</td>
+                        <td>{{ recomputation.date }}</td>
                         <td><a onclick="recomputation_play('{{ recomputation.name }}');" class="btn info"><i class="fa fa-play-circle"></i> Play</a></td>
                         <td><a onclick="recomputation_download('{{ recomputation.name }}');" class="btn btn-success"><i class="fa fa-download"></i> Download</a></td>
                     </tr>
