--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -8,9 +8,6 @@
             <div class="row">
                 <div class="col-md-5">
                     <h1>Recompute</h1>
-                    <p>A demo</p>
-                </div>
-                <div class="col-md-4 col-md-offset-3">
                     <p>Number of recomputations: {{ recomputation_count }}</p>
                 </div>
             </div>
@@ -22,7 +19,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-md-12" style="margin-bottom: 100px; margin-top: 100px">
+        <div class="col-md-12" style="margin-bottom: 50px; margin-top: 50px">
             <form class="text-center" action="{{ url_for('recompute') }}" method="get">
                 <span>Name: </span><input type="text" name="name" value="" placeholder="Enter name">
                 <span>GitHub URL: </span><input type="text" name="github_url" value="" size="50" placeholder="Enter URL">
@@ -37,10 +34,10 @@
         </div>
 
         <div class="col-md-12">
-            <table class="table table-hover">
+            <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>Name</th>
+                        <th>NAME</th>
                         <th>ID</th>
                         <th>TAG</th>
                         <th>VERSION</th>
@@ -57,8 +54,8 @@
                         <td>{{ recomputation.tag }}</td>
                         <td>{{ recomputation.version }}</td>
                         <td>{{ recomputation.date }}</td>
-                        <td><a onclick="recomputation_play('{{ recomputation.name }}');" class="btn info"><i class="fa fa-play-circle"></i> Play</a></td>
-                        <td><a onclick="recomputation_download('{{ recomputation.name }}');" class="btn btn-success"><i class="fa fa-download"></i> Download</a></td>
+                        <td><a onclick="recomputation_play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                        <td><a onclick="recomputation_download('{{ recomputation.name }}');"><i class="fa fa-download"></i> Download</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
