--- a/recompute/server/templates/layout.html
+++ b/recompute/server/templates/layout.html
@@ -9,9 +9,9 @@
 
     <!--<link rel="icon" href="../../favicon.ico">-->
 
+    <link rel="stylesheet" href="{{url_for('static', filename='bootstrap.min.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
