--- a/recompute/server/templates/recomputation.html
+++ b/recompute/server/templates/recomputation.html
@@ -10,17 +10,62 @@
 
 
     <div class="row">
-        <div class="col-lg-4">
-            <div class="row">
-                <div clas="col-md-4">
-                    <ul class="list-group">
-                        <li class="list-group-item"><span>NAME: {{ recomputation.name }}</span></li>
-                        <li class="list-group-item"><span>ID: {{ recomputation.id }}</span></li>
-                        <li class="list-group-item"><span>TAG: {{ recomputation.tag }}</span></li>
-                        <li class="list-group-item"><span>VERSION: {{ recomputation.name }}</span></li>
-                        <li class="list-group-item"><span>DATE: {{ recomputation.name }}</span></li>
-                    </ul>
+        <div class="col-md-4">
+            <ul class="list-group">
+                <li class="list-group-item"><span>NAME: {{ recomputation.name }}</span></li>
+                <li class="list-group-item"><span>ID: {{ recomputation.id }}</span></li>
+                <li class="list-group-item"><span>TAG: {{ recomputation.tag }}</span></li>
+                <li class="list-group-item"><span>VERSION: {{ recomputation.version }}</span></li>
+                <li class="list-group-item"><span>DATE: {{ recomputation.date }}</span></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-warning">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        <i class="fa fa-bullseye"></i>Builds
+                    </h3>
                 </div>
+
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>TAG</th>
+                            <th>VERSION</th>
+                            <th>DATE</th>
+                            <th>PLAY</th>
+                            <th>DOWNLOAD</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>{{ recomputation.tag }}</td>
+                            <td>{{ recomputation.version }}</td>
+                            <td>{{ recomputation.date }}</td>
+                            <td><a onclick="recomputation_play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                            <td><a onclick="recomputation_download('{{ recomputation.name }}');"><i class="fa fa-download"></i> Download</a></td>
+                        </tr>
+
+                        <tr>
+                            <td>{{ recomputation.tag }}</td>
+                            <td>{{ recomputation.version }}</td>
+                            <td>{{ recomputation.date }}</td>
+                            <td><a onclick="recomputation_play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                            <td><a onclick="recomputation_download('{{ recomputation.name }}');"><i class="fa fa-download"></i> Download</a></td>
+                        </tr>
+
+                        <tr>
+                            <td>{{ recomputation.tag }}</td>
+                            <td>{{ recomputation.version }}</td>
+                            <td>{{ recomputation.date }}</td>
+                            <td><a onclick="recomputation_play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                            <td><a onclick="recomputation_download('{{ recomputation.name }}');"><i class="fa fa-download"></i> Download</a></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
