--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -21,8 +21,8 @@
     <div class="row">
         <div class="col-md-12" style="margin-bottom: 50px; margin-top: 50px">
             <form class="text-center" action="{{ url_for('recompute') }}" method="get">
-                <span>Name: </span><input type="text" name="name" value="" placeholder="Enter name">
-                <span>GitHub URL: </span><input type="text" name="github_url" value="" size="50" placeholder="Enter URL">
+                <span>Name: </span><input type="text" name="name" value="" size="15" placeholder="Enter name">
+                <span>GitHub URL: </span><input type="text" name="github_url" value="" size="40" placeholder="Enter URL">
                 <span>Base VM: </span>
                 <select name="base_vm">
                 {% for box in base_vagrantboxes %}
