minor ui changes: btn, update, search

--- a/recompute/server/templates/base_vms.html
+++ b/recompute/server/templates/base_vms.html
@@ -4,8 +4,7 @@
 {% block content %}
 
     <div class="page-header">
-        <h1>Languages</h1>
-        <p>A demo</p>
+        <h1>Base VMs</h1>
     </div>
 
 {% endblock %}
