--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <h1>Recompute</h1>
-                    <p>Number of recomputations: {{ recomputation_count }}</p>
+                    <p>Recomputations: {{ recomputation_count }}</p>
                 </div>
             </div>
         </div>
@@ -19,21 +19,32 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-md-12" style="margin-bottom: 50px; margin-top: 50px">
-            <form class="text-center" action="{{ url_for('recompute') }}" method="get">
-                <span>Name: </span><input type="text" name="name" value="" size="15" placeholder="Enter name">
-                <span>GitHub URL: </span><input type="text" name="github_url" value="" size="40" placeholder="Enter URL">
-                <span>Base VM: </span>
-                <select name="base_vm">
-                {% for box in base_vagrantboxes %}
-                    <option value="{{ box }}">{{ box }}</option>
-                {% endfor %}
-                </select>
-                <input type="submit" value="Create">
+        <div class="top-buffer col-md-12">
+            <form class="form-inline" action="{{ url_for('recompute') }}" method="get">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" id="name" size="15" placeholder="Name">
+                </div>
+
+                <div class="form-group">
+                    <label for="github_url">GitHub URL</label>
+                    <input type="text" class="form-control" id="github_url" size="40" placeholder="URL">
+                </div>
+
+                <div class="form-group">
+                    <label for="base_vm">Base VM</label>
+                    <select class="form-control" id="base_vm">
+                    {% for box in base_vagrantboxes %}
+                        <option value="{{ box }}">{{ box }}</option>
+                    {% endfor %}
+                    </select>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Create</button>
             </form>
         </div>
 
-        <div class="col-md-12">
+        <div class="top-buffer col-md-12">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
