--- a/recompute/server/templates/recomputation.html
+++ b/recompute/server/templates/recomputation.html
@@ -5,7 +5,10 @@
 
     <div class="page-header">
         <h1>Recomputation: {{ recomputation.name }}</h1>
-        <p>A demo</p>
+        <h4>
+            <a href="#"><i class="fa fa-pencil"></i> Edit</a>&nbsp;&nbsp;
+            <a href="#"><i class="fa fa-refresh"></i> Rebuild</a>
+        </h4>
     </div>
 
 
