--- a/recompute/server/templates/software.html
+++ b/recompute/server/templates/software.html
@@ -5,12 +5,23 @@
 
     <div class="page-header">
         <h1>Software</h1>
-        <p>A demo</p>
     </div>
 
-    <div class="row">
+    <div class="top-buffer row">
         <div class="col-md-12">
-            <table class="table table-striped table-hover">
+            <div class="row">
+                <div class="col-md-6">
+                    <form class="form-inline" id="filter_users_form" action="#" method="POST" name="filter_software">
+                        <div class="form-group">
+                            <label for="name" >Name</label>
+                            {{ filter_software_form.name(type="text", class="form-control", id="name", placeholder="Name") }}
+                        </div>
+                        <a href="#" onclick="" class="btn btn-primary"><i class="fa fa-search"></i>Search</a>
+                    </form>
+                </div>
+            </div>
+
+            <table class="top-buffer table table-striped table-hover">
                 <thead>
                     <tr>
                         <th>NAME</th>
