--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -19,7 +19,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="top-buffer col-md-12">
+        <div class="top-buffer col-md-12 text-center">
             <form class="form-inline" action="{{ url_for('recompute') }}" method="get">
                 <div class="form-group">
                     <label for="name">Name</label>
