--- a/recompute/server/static/play.css
+++ b/recompute/server/static/play.css
@@ -12,8 +12,8 @@
   border: #fafafa solid 1px;
   background: #272829;
   position: absolute;
-  top: 20px;
-  left: 20px;
+  bottom: 20px;
+  right: 20px;
   z-index: 1000;
   box-shadow: rgba(0, 0, 0, 0.8) 2px 2px 20px;
 }
