--- a/recompute/server/templates/boxes.html
+++ b/recompute/server/templates/boxes.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="page-header">
-        <h1>Base VMs</h1>
+        <h1>Boxes</h1>
     </div>
 
 {% endblock %}
