--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -20,24 +20,21 @@
 
     <div class="row">
         <div class="top-buffer col-md-12 text-center">
-            <form class="form-inline" action="{{ url_for('recompute') }}" method="get">
+            <form class="form-inline" action="{{ url_for('create_recomputation') }}" method="POST">
+                {{ recompute_form.hidden_tag() }}
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" size="15" placeholder="Name">
+                    {{ recompute_form.name(class="form-control", placeholder="Name", size="15")}}
                 </div>
 
                 <div class="form-group">
                     <label for="github_url">GitHub URL</label>
-                    <input type="text" class="form-control" id="github_url" size="40" placeholder="URL">
+                    {{ recompute_form.github_url(class="form-control", placeholder="URL", size="40")}}
                 </div>
 
                 <div class="form-group">
-                    <label for="base_vm">Base VM</label>
-                    <select class="form-control" id="base_vm">
-                    {% for box in base_vagrantboxes %}
-                        <option value="{{ box }}">{{ box }}</option>
-                    {% endfor %}
-                    </select>
+                    <label for="box">Box</label>
+                    {{ recompute_form.box(class="form-control")}}
                 </div>
 
                 <button type="submit" class="btn btn-primary">Create</button>
@@ -45,6 +42,10 @@
         </div>
 
         <div class="top-buffer col-md-12">
+            <header>LATEST RECOMPUTATION
+                <div class="more"><a href="{{ url_for('recomputations_page') }}"><i class="fa fa-plus-square-o"></i> MORE</a></div>
+            </header>
+
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
@@ -58,15 +59,15 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for recomputation in latest_recomputation %}
+                {% for recomputation in latest_recomputations %}
                     <tr>
-                        <td><a href="{{ url_for('get_single_recomputation_page', name=recomputation.name) }}">{{ recomputation.name }}</a></td>
+                        <td><a href="{{ url_for('recomputation_page', name=recomputation.name) }}">{{ recomputation.name }}</a></td>
                         <td>{{ recomputation.id }}</td>
-                        <td>{{ recomputation.tag }}</td>
-                        <td>{{ recomputation.version }}</td>
-                        <td>{{ recomputation.date }}</td>
-                        <td><a onclick="recomputation_play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
-                        <td><a onclick="recomputation_download('{{ recomputation.name }}');"><i class="fa fa-download"></i> Download</a></td>
+                        <td>{{ recomputation.releases[0].tag }}</td>
+                        <td>{{ recomputation.releases[0].version }}</td>
+                        <td>{{ recomputation.releases[0].date }}</td>
+                        <td><a onclick="play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                        <td><a href="{{ url_for('download_vagrantbox', name=recomputation.name) }}"><i class="fa fa-download"></i> Download</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
