--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <h1>Recompute</h1>
-                    <p>Recomputations: {{ recomputation_count }}</p>
+                    <p>Recomputations: {{ recomputations_count }}</p>
                 </div>
             </div>
         </div>
